--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  charts_flutter: ^0.10.0
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.2
 
