--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  another_flushbar: ^1.10.20
   charts_flutter: ^0.10.0
+  cloud_firestore: ^1.0.4
   cupertino_icons: ^1.0.0
-  google_fonts: ^1.1.2
+  email_validator: ^2.0.1
+  firebase_auth: ^1.0.3
+  firebase_storage: ^8.0.3
+  flutter_spinkit: ^5.0.0
+  get_it: ^7.1.0
+  http: ^0.13.1
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
