--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_spinkit: ^5.0.0
   http: ^0.13.1
   provider: ^5.0.0
+  device_preview: ^0.7.3
 
 dev_dependencies:
   flutter_test:
